Fixed bouncing img getting slightly too small

--- a/src/assets/animations.css
+++ b/src/assets/animations.css
@@ -39,13 +39,13 @@
 
 @keyframes bounce {
   0% {
-    transform: scale(1.01);
+    transform: scale(1.015);
   }
   50% {
     transform: scale(1.1);
   }
   100% {
-    transform: scale(1.01);
+    transform: scale(1.015);
   }
 }
 
